--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,13 @@ body {
 h1 {
     color: blue; 
 }
+h2 {
+    color: lime; 
+}
 p {
     color: darkslategray;
+}
+li {
+    background-color: yellowgreen;
+    color: brown;
 }
